--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,8 +16,10 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/cli": "^4.1.13",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.6",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
@@ -34,6 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
