--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
+    "@knocklabs/node": "^1.20.0",
+    "@knocklabs/react": "^0.8.11",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/cli": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.6",
     "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
